# codebase-analyzer

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  claude_desktop_config.json  pyproject.toml
src/claude_codebase_analyzer/: __init__.py  cli.py  config.py  server.py
src/claude_codebase_analyzer/analysis/: __init__.py  callgraph.py  risk_engine.py  vuln_scanner.py  workflow_mapper.py
src/claude_codebase_analyzer/graph/: __init__.py  builder.py  cycles.py  visualizer.py
src/claude_codebase_analyzer/parsers/: __init__.py  base.py  go_parser.py  java_parser.py  python_parser.py  ts_utils.py  typescript_parser.py
src/claude_codebase_analyzer/reporters/: __init__.py  html_viz.py  markdown_gen.py
test_fixtures/go_project/: go.mod  main.go
test_fixtures/go_project/pkg/model/: model.go
test_fixtures/go_project/pkg/util/: util.go
test_fixtures/java_project/: pom.xml
test_fixtures/java_project/src/main/java/com/example/: App.java
test_fixtures/java_project/src/main/java/com/example/service/: Greeter.java
test_fixtures/java_project/src/main/java/com/example/util/: StringHelper.java
test_fixtures/python_project/: pyproject.toml
test_fixtures/python_project/.github/workflows/: ci.yml
test_fixtures/python_project/myapp/: __init__.py  main.py  models.py  utils.py
test_fixtures/python_project/scripts/: check.py
test_fixtures/python_project/tests/: test_models.py
test_fixtures/typescript_project/: package.json  tsconfig.json
test_fixtures/typescript_project/src/: app.ts  index.ts  legacy.js  utils.ts
test_fixtures/typescript_project/src/models/: user.ts
tests/: conftest.py  test_cli.py  test_server.py
tests/test_analysis/: test_callgraph.py  test_risk_engine.py  test_vuln_scanner.py  test_workflow_mapper.py
tests/test_graph/: test_builder.py  test_cycles.py
tests/test_parsers/: test_go_parser.py  test_java_parser.py  test_python_parser.py  test_symbols.py  test_typescript_parser.py
tests/test_reporters/: test_html_viz.py  test_markdown_gen.py
